<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AcademicAgenda</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="sync_calendar">Sync Calendar</string>
    <string name="manage_tasks">Manage Tasks</string>
    <string name="input_grades">Input Grades</string>
    <string name="view_grades">View Grades</string>
    <string name="add_event">Add Event</string>
    <string name="view_calendar">View Calendar</string>
    <string name="offline_mode1">Offline Mode</string>
    <string name="sync_calendar1">Sync Calendar</string>
    <string name="manage_tasks1">Manage Tasks</string>
    <string name="view_grades1">View Grades</string>
    <string name="add_event1">Add Event</string>
    <string name="view_calendar1">View Calendar</string>
    <string name="grade_s_n">Grade: %s%n</string>
    <string name="welcome_to_my_app">Welcome Screen</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_welcome">Welcome</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="add_event_to_calendar">Add Event to Calendar</string>
    <string name="entered_grades">Entered Grades:</string>
    <string name="add_grade">Add Grade</string>
    <string name="grade">Letter grade</string>
    <string name="subject">Class Name</string>
    <string name="title_activity_input_grades">InputGrades</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="todo">TODO</string>
    <string name="please_input_your_grades">Please input your grades</string>
    <string name="show_time">Show Time</string>
    <string name="submit">Submit</string>
    <string name="enter_grade">Enter Grades</string>
    <string name="Enter">Submit</string>
    <string name="enter_your_grade">Enter Grade</string>
    <string name="add_new_grade">Add New Grade</string>
    <string name="enter_grade_here">Enter Grade Here</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="grades_entered">Entered Grades:</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="enter_grades">Enter Grade</string>
    <string name="submit_grades">Submit</string>
    <string name="Grades_Entered">Entered Grades:</string>
    <string name="fetching_data_from_server">Fetching data from server</string>
    <string name="loading_data_from_local_storage">Loading data from local storage</string>
    <string name="welcome_to_academicagenda">Welcome to AcademicAgenda</string>
    <string name="save_grades">Save Grades</string>
</resources>