<!-- res/layout/activity_input_grades.xml -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        app:title=" Enter Grades Here" />

    <FrameLayout
        android:id="@+id/nav_host_fragment_content_input_grades"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="29dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/gradeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:hint="@string/enter_grades"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:padding="8dp" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gradeEditText"
            android:layout_marginTop="16dp"
            android:text="@string/submit_grades"
            tools:ignore="ObsoleteLayoutParam" />

        <TextView
            android:id="@+id/textViewEnteredGrades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Grades_Entered"
            android:textSize="18sp" />

    </FrameLayout>

    <EditText
        android:id="@+id/subjectEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:autofillHints=""
        android:hint="@string/enter_subject"
        android:inputType=""
        android:minHeight="48dp"
        android:padding="8dp" />


</RelativeLayout>
